<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_main">Current weather</string>
    <string name="bookmark">Bookmark</string>
    <string name="max_min">Max Temp: %1$s ° Min Temp: %2$s °</string>
    <string name="temp">%s °K</string>
    <string name="humidity">Humidity: %s %%</string>
    <string name="windSpeed">Wind Speed: %s Speed</string>
    <string name="windDegree">Wind angle: %s °</string>
    <string name="remove_bookmark">Remove from bookmarks</string>
    <string name="show_bookmark">Show bookmarks</string>
    <string name="hide_bookmark">Explore locations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
