<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="locationWeather"
            type="com.wheatherapp.model.LocationWeatherModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cityBottomDetailSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_16"

        android:layout_marginEnd="@dimen/dp_16"

        android:padding="0dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ScrollView
            android:id="@+id/weatherDataScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_16"
                    android:text="@{locationWeather.name}"
                    android:textColor="@color/blue_50"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Hydrabad" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivWeather"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:src="@drawable/ic_sun"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvname" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvmaxMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:text="@{String.format(@string/max_min, locationWeather.tempMax, locationWeather.tempMin)}"
                    android:textColor="@color/black_50_transperent"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvtemp"
                    app:layout_constraintTop_toBottomOf="@+id/tvtemp"
                    tools:text="@string/max_min" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvtemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@{String.format(@string/temp, locationWeather.temp)}"
                    android:textColor="@color/black_50_transperent"
                    android:textSize="@dimen/text_large"

                    app:layout_constraintStart_toEndOf="@id/ivWeather"
                    app:layout_constraintTop_toBottomOf="@+id/tvname"
                    tools:text="@string/temp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvhumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@{String.format(@string/humidity, locationWeather.humidity)}"
                    android:textColor="@color/black_50_transperent"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvmaxMin"
                    app:layout_constraintTop_toBottomOf="@+id/tvmaxMin"
                    tools:text="@string/humidity" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWindSpeed"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:drawablePadding="@dimen/dp_16"
                    android:text="@{String.format(@string/windSpeed, locationWeather.windSpeed)}"
                    android:textColor="@color/black_50_transperent"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"

                    app:layout_constraintStart_toStartOf="@+id/tvhumidity"
                    app:layout_constraintTop_toBottomOf="@+id/tvhumidity"
                    tools:text="@string/windSpeed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWindDegree"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@{String.format(@string/windDegree, locationWeather.windDegree)}"
                    android:textColor="@color/black_50_transperent"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tvWindSpeed"
                    app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed"
                    tools:text="@string/windSpeed" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddBookmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:text="@string/bookmark"
                    android:textAllCaps="false"

                    app:layout_constraintTop_toBottomOf="@+id/tvWindDegree" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <WebView
            android:id="@+id/webview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.card.MaterialCardView>


</layout>
